Tests/Resources/Bad/ERROR_NONEXHAUSTIVE_MATCH_PATTERNS/ne_nat_cast_as.st
language core;

extend with #fixpoint-combinator, #structural-patterns, #type-cast-patterns;

fn main(n : Nat) -> Nat {
  return match(n) {
      0 cast as Nat => n
      | succ(x) => n
  }
}